--- a/Backend/public/formulaire.css
+++ b/Backend/public/formulaire.css
@@ -1,12 +1,11 @@
 .form-style-5{
 	max-width: 700px;
 	padding: 10px 20px;
-	background: #f4f7f8;
 	margin: 10px auto;
 	padding: 20px;
-	background: #d8dcdd;
+	background: #ffffff;
 	border-radius: 8px;
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: 'Nunito', sans-serif;
 }
 .form-style-5 fieldset{
 	border: none;
@@ -24,7 +23,7 @@
 .form-style-5 input[type="number"],
 .form-style-5 input[type="date"],
 .form-style-5 select {
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: 'Nunito', sans-serif;
 	background: rgba(255,255,255,.1);
 	border: none;
 	border-radius: 4px;
