--- a/Backend/views/formModifStock.ejs
+++ b/Backend/views/formModifStock.ejs
@@ -24,5 +24,5 @@
                   <input type="number" class="field2" name="newStock" value="<%=medicament.Qte_En_Stock%>" placeholder="Stock du médicament" required>
                   <input type="number" class="field2" name="newNecess" value="<%=medicament.Qte_Necessaire%>" placeholder="Quantité nécessaire du médicament" required>
                 </fieldset>
-                <input type="submit" value="Envoyer" onclick="return confirm('Etes-vous sûr de vouloir supprimer ce poste ?');">
+                <input type="submit" value="Envoyer" onclick="return confirm('Etes-vous sûr de vouloir Modifier ce poste ?');">
             </form>
