--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -56,10 +56,10 @@ Utilité : Affichage de la liste des patients
                         <td class="column3"><%=moment(patient.Date_naissance).calendar()%></td>
                         <td class="column4"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Patient/newOrdonnance/<%=patient.noSS%>">Nouvelle ordonnance</a></td>
                         <td class="column5"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Patient/info/<%=patient.noSS%>">Fiche patient</a></td>
-                        <td class="column6"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Patient/delete/<%=patient.noSS%>">Supprimer</a></td>
+                        <td class="column6"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Patient/delete/<%=patient.noSS%>" onclick="return confirm('Etes-vous sûr de vouloir Supprimer ce poste ?')">Supprimer</a></td>
                     </tr>
 
-                    <% if(c == 1) c = 0; else c = 1 %>
+                    <% if(c == 0) c = 1; else c = 0 %>
                 
                 <% })%>
                 
