--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -15,6 +15,7 @@ Utilité : Affichage de la liste des patients
          <!-- barre de recherche -->
             <div class="wrap">
                 <div class="search">
+                <form action="/PharmaScieSauteuse/Gestion-de-Patient"></form>
                 <input type="text" class="searchTerm" placeholder="Numéro de sécurité social">
                 <button type="submit" class="searchButton">
                     <i class="bx bx-search"></i>
