--- a/Backend/views/formModifPatient.ejs
+++ b/Backend/views/formModifPatient.ejs
@@ -6,6 +6,9 @@
    <body id="body-pd">
       <header class="header" id="header">
          <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
+         <div class="Droite">
+            <a class="btn btn-outline-dark" href="/PharmaScieSauteuse/Gestion-de-Patient">Retour</a>
+         </div>
       </header>
 
 
