--- a/Backend/views/erreur.ejs
+++ b/Backend/views/erreur.ejs
@@ -14,7 +14,7 @@
                     </span>
         
                     <div class="card-body mx-auto">
-                        <a type="button" href="http://localhost:3000/PharmaScieSauteuse" class="btn btn-sm btn-color  text-white"> Retour </a>
+                        <a type="button" href="https://localhost:3000/PharmaScieSauteuse" class="btn btn-sm btn-color  text-white"> Retour </a>
                     </div>
                 </div>
             </div>
